# spice-line-fits

./: CITATION.cff  pyproject.toml
linefit_modules/: util.py
spice-line-fits/linefit_modules/: skew_parameter_search.py
spice-line-fits/notebooks/: linefits_example_skewsearch_sprouts.ipynb
spice_line_fits/linefit_modules/: plotting_modules.py  skew_correction.py  skew_parameter_search.py  util.py
