[project]
name = "spice-line-fits"
version = "0.1.0"
description = ""
authors = [
    {name = "dolliou",email = "antoine.dolliou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy (>=7.0.1,<8.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.1.0,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
